# InPost-Air

./: .devcontainer.json  .gitignore  .releaserc.json  CHANGELOG.md  LICENSE  Pipfile  README.md  changeVersion.mjs  hacs.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: api-tests.yaml  checks.yaml  codeql.yml  dependabot-prs.yaml  release.yaml  trivy.yaml  validate.yaml
config/: configuration.yaml
custom_components/inpost_air/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  models.py  sensor.py  strings.json  utils.py
custom_components/inpost_air/aqi/: european.py
custom_components/inpost_air/sensors/: air_quality_index.py  parcel_locker_sensor.py
custom_components/inpost_air/sensors/aqi/: european.py  polish.py
custom_components/inpost_air/translations/: en.json  pl.json
custom_components/integration_blueprint/: api.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_migration.py  test_migration_integration.py  test_utils.py
