[project]
name = "inpost-air"
version = "1.5.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["dacite==1.9.2", "python-slugify==8.0.4"]

[dependency-groups]
dev = [
    "homeassistant==2024.6.0",
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "pytest-homeassistant-custom-component==0.13.132",
    "pytest-json-ctrf==0.3.5",
    "ruff==0.9.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
# old version of uv is somehow transitive dependency of pytest-homeassistant-custom-component
override-dependencies = ["uv; sys_platform == 'never'"]
